[project]
name = "repo-rag"
version = "0.1.0"
description = "Local semantic search for any codebase. Indexes code and docs, exposes search via MCP for coding agents."
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "click>=8.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "qdrant-client>=1.12",
    "sentence-transformers>=3.0",
    "tree-sitter-languages>=0.0.1",
    "mcp[cli]>=1.0",
    "requests>=2.28",
    "beautifulsoup4>=4.12",
    "markdownify>=0.12",
    "rich>=13.0",
    "einops>=0.7",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "ruff"]

[project.scripts]
repo-rag = "repo_rag.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
